[project]
name = "searchmovieopenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=2.0.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "openai>=2.21.0",
    "tiktoken>=0.12.0",
    "typing-extensions>=4.15.0",
]
